--- a/mydqa-numpy-remake-full.ipynb
+++ b/mydqa-numpy-remake-full.ipynb
@@ -234,17 +234,13 @@
     "    eps = 0.0\n",
     "    for mu in range(N_xi):\n",
     "        for kk in range(N+1):\n",
-    "            mpo = Hz_mu_singleK(N, mu, kk, fxft, xi)  # store!\n",
+    "            mpo = Hz_mu_singleK(N, mu, kk, fxft, xi)  # TODO store for once\n",
     "\n",
     "            psiH = apply_mpsmpo(psi, mpo)\n",
-    "\n",
-    "            #print(psiH[5])\n",
-    "            #raise Exception('stop')\n",
     "\n",
     "            E = braket(psiH, psi)\n",
     "\n",
     "            eps += E/N_tens\n",
-    "    \n",
     "    return eps[0,0]"
    ]
   },
@@ -268,11 +264,6 @@
     "xi = np.loadtxt('dataxi.txt')\n",
     "\n",
     "# this is the initial state, an MPS of bond_dim = 1\n",
-    "psi = qu.tensor.tensor_builder.MPS_product_state( \n",
-    "    [ np.array([[2**-0.5, 2**-0.5]], dtype=np.complex128) ] * N,\n",
-    "    tags=['psi'],\n",
-    "    #site_ind_id='s{}'\n",
-    ")\n",
     "\n",
     "psi = [ np.array([[[2**-0.5], [2**-0.5]]], dtype=np.complex128) ] * N\n",
     "\n",
@@ -634,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
