added loss module for qiskit sim

--- a/ed/exact_diag.ipynb
+++ b/ed/exact_diag.ipynb
@@ -17,11 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-17 10:27:19.006349: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-03-19 18:21:16.418019: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-17 10:27:21.702584: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/media/alberto/Volume/Kubuntu/miniconda3/envs/tf2/lib/\n",
-      "2023-03-17 10:27:21.703140: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/media/alberto/Volume/Kubuntu/miniconda3/envs/tf2/lib/\n",
-      "2023-03-17 10:27:21.703150: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-03-19 18:21:18.929102: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/media/alberto/Volume/Kubuntu/miniconda3/envs/tf2/lib/\n",
+      "2023-03-19 18:21:18.929562: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/media/alberto/Volume/Kubuntu/miniconda3/envs/tf2/lib/\n",
+      "2023-03-19 18:21:18.929574: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     },
     {
@@ -35,9 +35,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-17 10:27:25.307102: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:25.361825: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:25.362159: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+      "2023-03-19 18:21:21.743865: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-03-19 18:21:21.799867: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-03-19 18:21:21.800177: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     }
    ],
@@ -67,25 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-17 10:27:25.412136: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-17 10:27:25.414180: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:25.414522: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:25.414800: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:26.450474: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:26.451354: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:26.451561: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-03-17 10:27:26.452048: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3356 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:01:00.0, compute capability: 6.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sigma_x = tfl.LinearOperatorFullMatrix([[0., 1.], [1., 0.]])\n",
     "sigma_z = tfl.LinearOperatorFullMatrix([[1., 0.], [0., -1.]])\n",
@@ -111,7 +95,7 @@
     "    \n",
     "    # opearotrs are first stacked on the n dimension and reduced, then labels are applied,\n",
     "    # then heaviside step function is applied (relu), and finally reduced over n_data\n",
-    "    return tf.reduce_sum(tf.nn.relu(-tf.reshape(labels, (-1, 1, 1))*tf.reduce_sum(tf.stack(ops), axis=0)), axis=0) / tf.sqrt(n+0.)\n",
+    "    return tf.reduce_sum(tf.nn.relu(-tf.reshape(labels, (-1, 1, 1))*tf.reduce_sum(tf.stack(ops), axis=0)), axis=0)# / tf.sqrt(n+0.)\n",
     "\n",
     "# reimplementation of the previous function with an eye over ram usage\n",
     "def H_perc_nobatch(data, labels):\n",
@@ -131,7 +115,7 @@
     "        h_perc += tf.nn.relu(-labels[i]*op)\n",
     "        del op\n",
     "\n",
-    "    return h_perc / tf.sqrt(n+0.)\n",
+    "    return h_perc #/ tf.sqrt(n+0.)\n",
     "\n",
     "def H_x(n):\n",
     "    sigma_xs = [tfl.LinearOperatorKronecker([id]*i+[sigma_x]+[id]*(n-i-1)).to_dense() for i in range(n)]\n",
@@ -160,30 +144,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-       "array([[0.       , 0.       , 0.       , 0.       ],\n",
-       "       [0.       , 0.       , 0.       , 0.       ],\n",
-       "       [0.       , 0.       , 1.4142135, 0.       ],\n",
-       "       [0.       , 0.       , 0.       , 1.4142135]], dtype=float32)>"
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 2., 0.],\n",
+       "       [0., 0., 0., 2.]], dtype=float32)>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data   = tf.constant([[1., 1.], [-1., 1.]])\n",
+    "data   = tf.constant([[1., -1.], [-1., -1.]])\n",
     "labels = tf.constant([1., -1.])\n",
     "\n",
     "h_perc = H_perc(data, labels)\n",
     "h_perc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_data, n = data.shape\n",
+    "\n",
+    "# define a batch of ientities operators where batch is the #data\n",
+    "id_batch = tfl.LinearOperatorIdentity(2, batch_shape=[n_data])\n",
+    "\n",
+    "# define a batch of sigma_z operators where batch is the #data\n",
+    "sigma_z_batch = tf.tile(tf.expand_dims(tf.constant([[1., 0.], [0., -1.]]), axis=0), [n_data, 1, 1])\n",
+    "sigma_z_op = tfl.LinearOperatorFullMatrix(sigma_z_batch)\n",
+    "\n",
+    "# define a batch of data operators where batch is the #data.\n",
+    "# each coordinate of a single datum is casted into a 2x2 operator,\n",
+    "# which will be composed with the corresponding sigma_z operator\n",
+    "# result is a list of n [n_data, 2, 2] opearators\n",
+    "data_ops = [tfl.LinearOperatorDiag(tf.repeat(data, [2], axis=1)[:,i:i+2]) for i in range(0, n*2, 2)]\n",
+    "\n",
+    "ops = [tfl.LinearOperatorKronecker([id_batch]*i+[tfl.LinearOperatorComposition([data_ops[i], sigma_z_op])]+[id_batch]*(n-i-1)).to_dense() for i in range(n)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfl.LinearOperatorKronecker([tfl.LinearOperatorFullMatrix(np.array([[0., 0.], [0., 1.]], 'float32')), id]).to_dense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfl.LinearOperatorKronecker([id, tfl.LinearOperatorFullMatrix(np.array([[0., 0.], [0., 1.]], 'float32'))]).to_dense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "hadamard = tfl.LinearOperatorFullMatrix(np.array([[1., 1.], [1., -1.]], 'float32') / np.sqrt(2.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ops = [tfl.LinearOperatorKronecker([id]*i+[hadamard]+[id]*(n-i-1)).to_dense() for i in range(n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1., -1., -1.,  1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.diag(tfl.LinearOperatorKronecker([sigma_z]*10).to_dense())[:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1024,), dtype=float32, numpy=\n",
+       "array([7.071067  , 0.70710677, 0.70710677, ..., 0.        , 0.        ,\n",
+       "       0.        ], dtype=float32)>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_sum(tf.stack(ops), axis=0)[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a batch of sigma_z operators where batch is the #data\n",
+    "sigma_z_batch = tf.tile(tf.expand_dims(tf.constant([[1., 0.], [0., -1.]]), axis=0), [n_data, 1, 1])\n",
+    "sigma_z_op = tfl.LinearOperatorFullMatrix(sigma_z_batch)\n",
+    "\n",
+    "# define a batch of data operators where batch is the #data.\n",
+    "# each coordinate of a single datum is casted into a 2x2 operator,\n",
+    "# which will be composed with the corresponding sigma_z operator\n",
+    "# result is a list of n [n_data, 2, 2] opearators\n",
+    "data_ops = [tfl.LinearOperatorDiag(tf.repeat(data, [2], axis=1)[:,i:i+2]) for i in range(0, n*2, 2)]\n",
+    "\n",
+    "ops = [tfl.LinearOperatorKronecker([id_batch]*i+[tfl.LinearOperatorComposition([data_ops[i], sigma_z_op])]+[id_batch]*(n-i-1)).to_dense() for i in range(n)]\n"
    ]
   },
   {
@@ -243,27 +379,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_x = H_x(10)\n",
+    "h_x = tf.cast(h_x, 'complex64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-       "array([[0., 1., 1., 0.],\n",
-       "       [1., 0., 0., 1.],\n",
-       "       [1., 0., 0., 1.],\n",
-       "       [0., 1., 1., 0.]], dtype=float32)>"
+       "<tf.Tensor: shape=(1024, 1024), dtype=complex64, numpy=\n",
+       "array([[ 2.12028925e-03+2.48561278e-08j, -1.35356245e-07+3.30181443e-03j,\n",
+       "        -1.07416568e-07+3.30172945e-03j, ...,\n",
+       "         1.39463907e-08+1.14284955e-01j,  2.98952934e-08+1.14284910e-01j,\n",
+       "        -1.77988201e-01-8.90562717e-08j],\n",
+       "       [-1.34782184e-07+3.30181373e-03j,  2.12021661e-03+2.56677435e-08j,\n",
+       "        -5.14242565e-03+2.52602916e-08j, ...,\n",
+       "         7.33815953e-02+4.48015181e-09j, -1.77988321e-01-8.34134113e-08j,\n",
+       "         1.26395577e-07+1.14284970e-01j],\n",
+       "       [-1.05071535e-07+3.30172828e-03j, -5.14241960e-03+2.67564797e-08j,\n",
+       "         2.12010415e-03-9.85613724e-09j, ...,\n",
+       "        -1.77988485e-01+1.31940894e-08j,  7.33815059e-02-3.86075216e-09j,\n",
+       "        -8.44682546e-09+1.14285044e-01j],\n",
+       "       ...,\n",
+       "       [ 1.44361900e-08+1.14284955e-01j,  7.33816028e-02+8.29661584e-09j,\n",
+       "        -1.77988485e-01+7.83095278e-09j, ...,\n",
+       "         2.12038797e-03+8.43158290e-08j, -5.14247641e-03-5.84675668e-08j,\n",
+       "         2.16125756e-07+3.30203981e-03j],\n",
+       "       [ 3.01268201e-08+1.14284925e-01j, -1.77988350e-01-5.81322439e-08j,\n",
+       "         7.33815134e-02-3.64987396e-09j, ...,\n",
+       "        -5.14247967e-03-5.56293109e-08j,  2.12016003e-03-1.41272514e-08j,\n",
+       "         1.84668167e-07+3.30199301e-03j],\n",
+       "       [-1.77988201e-01-1.27106489e-07j,  1.26200916e-07+1.14284970e-01j,\n",
+       "        -1.23915260e-08+1.14285037e-01j, ...,\n",
+       "         2.13978083e-07+3.30203562e-03j,  1.86504053e-07+3.30199185e-03j,\n",
+       "         2.11967085e-03+4.90127547e-07j]], dtype=complex64)>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "h_x = H_x(data.shape[1])\n",
-    "h_x"
+    "eigvals, eigvecs = tfl.eigh(h_x)\n",
+    "\n",
+    "tfl.matmul(eigvecs, tfl.matmul(tfl.diag(tf.exp(-1.j*eigvals)), eigvecs, adjoint_b=True), adjoint_a=False)"
    ]
   },
   {
