added LossTracker class

--- a/circuit-simulation/matcha_test.ipynb
+++ b/circuit-simulation/matcha_test.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,24 +736,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import qiskit.quantum_info as qi\n",
     "from qiskit.extensions.simulator import snapshot\n",
-    "from qiskit import Aer, transpile"
+    "from qiskit import Aer, transpile, QuantumRegister, AncillaRegister"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LossTracker:\n",
+    "    def __init__(self, num_qubits, num_ancillae):\n",
+    "\n",
+    "        self.n_qubits   = num_qubits\n",
+    "        self.n_ancillae = num_ancillae\n",
+    "        self._statevecs = []\n",
+    "        self._h_perc    = None\n",
+    "        self._little_endian = True\n",
+    "        self._statevecs_arr = None\n",
+    "\n",
+    "\n",
+    "    def track(self, qc, compose=True):\n",
+    "\n",
+    "        if compose:\n",
+    "            # create a copy of the current circuit internally\n",
+    "            self.current_qc = QuantumCircuit(QuantumRegister(self.n_qubits), AncillaRegister(self.n_ancillae))\n",
+    "            if len(self._statevecs) > 0:\n",
+    "                self.current_qc.initialize(self._statevecs[-1], range(self.n_qubits+self.n_ancillae))\n",
+    "\n",
+    "            # compose the circuit\n",
+    "            if type(qc) is list:\n",
+    "                for circuit in qc:\n",
+    "                    self.current_qc = self.current_qc.compose(circuit.copy())\n",
+    "            elif type(qc) is QuantumCircuit:\n",
+    "                self.current_qc = self.current_qc.compose(qc.copy())\n",
+    "            else:\n",
+    "                print('Error: type of qc is', type(qc))\n",
+    "                return\n",
+    "        else:\n",
+    "            self.current_qc = qc\n",
+    "\n",
+    "        # track the state\n",
+    "        self._statevecs.append(qi.Statevector.from_instruction(self.current_qc))\n",
+    "        del self.current_qc\n",
+    "\n",
+    "    @property\n",
+    "    def statevecs(self):\n",
+    "        return self._statevecs\n",
+    "    \n",
+    "    @property\n",
+    "    def h_perc(self):\n",
+    "        return self._h_perc\n",
+    "\n",
+    "    def reset(self, num_qubits=None, num_ancillae=None):\n",
+    "        self._statevecs.clear()\n",
+    "        self._statevecs_arr = None\n",
+    "\n",
+    "        if num_qubits:\n",
+    "            self.n_qubits = num_qubits\n",
+    "        if num_ancillae:\n",
+    "            self.n_ancillae = num_ancillae\n",
+    "\n",
+    "    def finalize(self):\n",
+    "\n",
+    "        # convert statevectors to arrays, keep only qubits of interest\n",
+    "        arr_list = []\n",
+    "        for state in self._statevecs:\n",
+    "            out_red = qi.partial_trace(state, range(self.n_qubits, self.n_qubits + self.n_ancillae))\n",
+    "            prob, st_all = np.linalg.eig(out_red.data)\n",
+    "            idx    = np.argmax(prob) \n",
+    "            arr_list.append(st_all[:, idx])\n",
+    "\n",
+    "        self._statevecs_arr = np.stack(arr_list)\n",
+    "        del out_red, prob, st_all, idx, arr_list\n",
+    "\n",
+    "    def __loss(self, statevec, h_perc):\n",
+    "\n",
+    "        return np.vdot(statevec, np.dot(h_perc, statevec))\n",
+    "\n",
+    "    def get_losses(self, data, little_endian=True, labels=None):\n",
+    "\n",
+    "        if len(self._statevecs) == 0:\n",
+    "            print('Error: no statevectors has been tracked down, please call track() before')\n",
+    "            return\n",
+    "        \n",
+    "        if labels is None:\n",
+    "            labels = np.ones((data.shape[0],))\n",
+    "        \n",
+    "        if self._statevecs_arr is None:\n",
+    "            print('LossTracker was not finalized, finalizing...')\n",
+    "            self.finalize()\n",
+    "            print('Done!')\n",
+    "            \n",
+    "        if self._h_perc is None or self._little_endian != little_endian:\n",
+    "\n",
+    "            if little_endian:\n",
+    "                self._h_perc = H_perc_nobatch(data, labels)\n",
+    "            else:\n",
+    "                # invert data components if the circuit was constructed in big endian mode\n",
+    "                # NOT SURE IF THIS WORKS\n",
+    "                self._h_perc = H_perc_nobatch(data[:,::-1], labels)\n",
+    "           \n",
+    "           \n",
+    "        return np.apply_along_axis(self.__loss, axis=1, arr=self._statevecs_arr, h_perc=self._h_perc)\n",
+    "    \n",
+    "    def get_edensity(self, data, little_endian=True, labels=None):\n",
+    "\n",
+    "        losses = self.get_losses(data, little_endian=little_endian, labels=labels)\n",
+    "        eigvals, _ = np.linalg.eigh(self._h_perc)\n",
+    "\n",
+    "        return (losses-eigvals[0]) / data.shape[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb9b14b4d0640ab92ab629520614b06",
+       "model_id": "21bef955eae64db18c54e9fbdc6d503c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -808,6 +917,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    return QuantumCircuit(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f2311f8f430>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 160,
    "metadata": {},
    "outputs": [
@@ -851,35 +990,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def your_evolution(qc, p, num_qubits, num_ancillae):\n",
+    "def your_evolution(p, num_qubits, num_ancillae):\n",
     "    \n",
     "    # implement yout evolution here\n",
+    "    qc = QuantumCircuit(num_qubits+num_ancillae)\n",
     "    if p == 1:\n",
     "        qc.h(range(num_qubits))\n",
-    "        return\n",
     "    if p == 2:\n",
     "        qc.h(range(num_qubits))\n",
     "        qc.x(range(num_qubits, num_qubits+num_ancillae))\n",
-    "        return\n",
     "    if p == 3:\n",
-    "        qc.cx(5, 3)\n",
-    "        return\n",
+    "        qc.x( 3)\n",
+    "\n",
     "    if p == 4:\n",
     "        qc.x(2)\n",
+    "\n",
+    "    return qc\n",
     "    \n",
     "def get_statevec(qc, num_qubits):\n",
     "\n",
     "    statevec = qi.Statevector.from_instruction(qc)\n",
     "    out_red = qi.partial_trace(statevec, range(num_qubits, qc.num_qubits))\n",
     "    prob, st_all = np.linalg.eig(out_red.data)\n",
-    "    cond = (prob>0.99) & (prob<1.01)\n",
-    "    st = st_all[:, cond].ravel()\n",
+    "    cond = np.argmax(prob)\n",
+    "    st = st_all[:, cond]\n",
     "    \n",
-    "    return(st_all)\n",
+    "    return(st)\n",
     "\n",
     "\n",
     "def get_statevec2(qc, num_qubits):\n",
@@ -889,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -903,10 +1043,10 @@
        "q_2: ┤ H ├┤ H ├─────\n",
        "     ├───┤├───┤┌───┐\n",
        "q_3: ┤ H ├┤ H ├┤ X ├\n",
-       "     ├───┤└───┘└─┬─┘\n",
-       "q_4: ┤ X ├───────┼──\n",
-       "     ├───┤       │  \n",
-       "q_5: ┤ X ├───────■──\n",
+       "     ├───┤└───┘└───┘\n",
+       "q_4: ┤ X ├──────────\n",
+       "     ├───┤          \n",
+       "q_5: ┤ X ├──────────\n",
        "     └───┘          </pre>"
       ],
       "text/plain": [
@@ -918,14 +1058,14 @@
        "q_2: ┤ H ├┤ H ├─────\n",
        "     ├───┤├───┤┌───┐\n",
        "q_3: ┤ H ├┤ H ├┤ X ├\n",
-       "     ├───┤└───┘└─┬─┘\n",
-       "q_4: ┤ X ├───────┼──\n",
-       "     ├───┤       │  \n",
-       "q_5: ┤ X ├───────■──\n",
+       "     ├───┤└───┘└───┘\n",
+       "q_4: ┤ X ├──────────\n",
+       "     ├───┤          \n",
+       "q_5: ┤ X ├──────────\n",
        "     └───┘          "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,18 +1078,63 @@
     "num_qubits   = 4\n",
     "num_ancillae = 2\n",
     "\n",
-    "qc = QuantumCircuit(num_qubits + num_ancillae)\n",
+    "qc_tot = QuantumCircuit(num_qubits + num_ancillae)\n",
     "myst = []\n",
+    "\n",
+    "loss_tracker = LossTracker(num_qubits, num_ancillae)\n",
     "\n",
     "# apply evoltion \n",
     "for p in range(P):\n",
     "\n",
-    "    your_evolution(qc, p+1, num_qubits, num_ancillae)\n",
-    "    myst.append(get_statevec(qc, num_qubits))\n",
+    "    qc = your_evolution(p+1, num_qubits, num_ancillae)\n",
+    "    loss_tracker.track(qc)\n",
+    "    qc_tot = qc_tot.compose(qc)\n",
     "    #get_statevec2(qc, num_qubits)\n",
     "\n",
     "\n",
-    "qc.draw()"
+    "qc_tot.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LossTracker was not finalized, finalizing...\n",
+      "Done!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5791d7e198af4d55a001a3b6eea17426",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Constructing H_perc:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2.81250000e-01+0.j, 8.21166447e-33+0.j, 2.50000000e-01+0.j])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss_tracker.get_edensity(data)"
    ]
   },
   {
@@ -1001,13 +1186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35fbd0240efe473fbc2a9d4c5d7095d8",
+       "model_id": "3b3b166af9564d62bff8c568814b9434",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,27 +1206,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[7.50000000e-02+0.j, 1.12500000e+00+0.j, 8.57142857e-02+0.j,\n",
-       "        1.01270784e+00+0.j, 1.25436876e-01+0.j, 1.25436876e-01+0.j,\n",
-       "        1.25436876e-01+0.j, 1.01270784e+00+0.j, 1.01270784e+00+0.j,\n",
-       "        1.01270784e+00+0.j, 2.78724976e+00+0.j, 3.67452072e+00+0.j,\n",
-       "        1.25436876e-01+0.j, 1.01270784e+00+0.j, 1.89997880e+00+0.j,\n",
-       "        2.78724976e+00+0.j],\n",
-       "       [6.36949476e-34+0.j, 5.57437279e-01+0.j, 4.02694445e-01+0.j,\n",
-       "        2.35236241e-01+0.j, 9.67168061e-01+0.j, 1.00000000e+00+0.j,\n",
-       "        2.09522315e+00+0.j, 1.49038072e+00+0.j, 3.85295044e-01+0.j,\n",
-       "        4.82314873e-02+0.j, 9.70065701e-01+0.j, 1.00000000e+00+0.j,\n",
-       "        2.00956905e+00+0.j, 3.99989784e+00+0.j, 1.17991275e+00+0.j,\n",
-       "        3.00000000e+00+0.j],\n",
-       "       [0.00000000e+00+0.j, 1.00000000e+00+0.j, 1.93362604e+00+0.j,\n",
-       "        1.26149626e-02+0.j, 2.05375900e+00+0.j, 1.00000000e+00+0.j,\n",
-       "        1.00000000e+00+0.j, 1.00000000e+00+0.j, 1.00402206e+00+0.j,\n",
-       "        1.96267976e-01+0.j, 6.25129364e-01+0.j, 6.20263175e-01+0.j,\n",
-       "        2.33671197e+00+0.j, 1.45904376e+00+0.j, 1.78827572e-02+0.j,\n",
-       "        3.00000000e+00+0.j]])"
+       "array([1.12500000e+00+0.j, 6.36949476e-34+0.j, 1.00000000e+00+0.j])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
