added (num/cu)py version of ed, optimized LossTracker

--- a/circuit-simulation/matcha_test.ipynb
+++ b/circuit-simulation/matcha_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,13 +322,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def H_perc_diag(data, labels):\n",
+    "    n_data, n = data.shape\n",
+    "    identity = np.ones((2,), 'float32')\n",
+    "    sigma_z  = np.array([1., -1.])\n",
+    "\n",
+    "    h_perc = np.zeros((2**n,), dtype='float32')\n",
+    "    \n",
+    "    for i in tqdm(range(n_data), desc='Constructing H_perc'):\n",
+    "\n",
+    "        op = np.zeros((2**n,), dtype='float32')\n",
+    "        for j in range(n):\n",
+    "\n",
+    "            op += kronecker_prod([identity]*j+[data[i, j] * sigma_z]+[identity]*(n-j-1))\n",
+    "\n",
+    "        h_perc += ReLU(-labels[i]*op)\n",
+    "        del op\n",
+    "\n",
+    "    return (h_perc / np.sqrt(n)).astype('complex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c5757281e604d878b16f8ac6b1d47db",
+       "model_id": "052826067097421e97cf9e4523ad4b29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +370,80 @@
     "data = np.load('../data/patterns8_10.npy')\n",
     "labels = np.ones((data.shape[0],))\n",
     "\n",
-    "h_perc = H_perc_nobatch(data[:,::-1], labels)"
+    "h_perc = H_perc_nobatch(data[:,::1], labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eigvals, _ = np.linalg.eigh(h_perc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.sort(np.diag(h_perc)), eigvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9f216620b0c49c793aa492a8433ce39",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Constructing H_perc:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "h_perc_opt = H_perc_opt(data, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(h_perc_opt, np.diag(h_perc))"
    ]
   },
   {
@@ -736,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +917,7 @@
     "\n",
     "    def __loss(self, statevec, h_perc):\n",
     "\n",
-    "        return np.vdot(statevec, np.dot(h_perc, statevec))\n",
+    "        return np.vdot(statevec, h_perc * statevec)\n",
     "\n",
     "    def get_losses(self, data, little_endian=True, labels=None):\n",
     "\n",
@@ -837,11 +936,11 @@
     "        if self._h_perc is None or self._little_endian != little_endian:\n",
     "\n",
     "            if little_endian:\n",
-    "                self._h_perc = H_perc_nobatch(data, labels)\n",
+    "                self._h_perc = H_perc_diag(data, labels)\n",
     "            else:\n",
     "                # invert data components if the circuit was constructed in big endian mode\n",
     "                # NOT SURE IF THIS WORKS\n",
-    "                self._h_perc = H_perc_nobatch(data[:,::-1], labels)\n",
+    "                self._h_perc = H_perc_diag(data[:,::-1], labels)\n",
     "           \n",
     "           \n",
     "        return np.apply_along_axis(self.__loss, axis=1, arr=self._statevecs_arr, h_perc=self._h_perc)\n",
@@ -849,20 +948,40 @@
     "    def get_edensity(self, data, little_endian=True, labels=None):\n",
     "\n",
     "        losses = self.get_losses(data, little_endian=little_endian, labels=labels)\n",
-    "        eigvals, _ = np.linalg.eigh(self._h_perc)\n",
+    "        e0 = np.sort(self._h_perc)[0]\n",
     "\n",
-    "        return (losses-eigvals[0]) / data.shape[1]\n"
+    "        return (losses-e0) / data.shape[1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3.])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3, )) * np.array([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21bef955eae64db18c54e9fbdc6d503c",
+       "model_id": "f26a272f5aea4990a381dc2ab7ff706f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1184,7 @@
        "     └───┘          "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1230,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5791d7e198af4d55a001a3b6eea17426",
+       "model_id": "6b2d1b8cc9514f7abd31d91a491af746",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1128,7 +1247,7 @@
        "array([2.81250000e-01+0.j, 8.21166447e-33+0.j, 2.50000000e-01+0.j])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
