--- a/dQA_circuit.ipynb
+++ b/dQA_circuit.ipynb
@@ -13,7 +13,7 @@
     "from qiskit.visualization import plot_histogram\n",
     "from qiskit.quantum_info import Statevector\n",
     "\n",
-    "from losstre import *\n",
+    "from lib.losstre import *\n",
     "from tqdm import trange"
    ]
   },
@@ -382,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
